# tourism

./: .gitignore  README.md  especialidade.csv  estabelecimento.csv  final.csv  pyproject.toml
app/: extract.py  processing.py  processing_refactor.py  teste.py
data/processed/: csv_columns.csv  fixed_csv.csv  invalid_csv_processed.csv  invalid_excel_processed.csv
data/raw/: restaurante-cafeteria-bar-e-similares-2022-Q2.xlsx  restaurante-cafeteria-bar-e-similares-2022-Q3.xlsx  restaurantescafeteriasebares201701trimestrecadasturpj-2017-Q1.csv  restaurantescafeteriasebares201702trimestrecadasturpj-2017-Q2.csv  restaurantescafeteriasebares201704trimestrecadasturpj-2017-Q4.csv  restaurantescafeteriasebares201801trimestrecadasturpj-2018-Q1.csv  restaurantescafeteriasebares201802trimestrecadasturpj-2018-Q2.csv  restaurantescafeteriasebares201803trimestrecadasturpj-2018-Q3.csv  restaurantescafeteriasebares201804trimestrecadasturpj-2018-Q4.csv  restaurantescafeteriasebares201901trimestrecadasturpj-2019-Q1.csv  restaurantescafeteriasebares201902trimestrecadasturpj-2019-Q2.csv  restaurantescafeteriasebares201903trimestrecadasturpj-2019-Q3.csv  restaurantescafeteriasebares201904trimestrecadasturpj-2019-Q4.csv  restaurantescafeteriasebares202001trimestrecadasturpj-2020-Q1.csv
schema/: infered_schema.py  schema.py
tests/: test_extract.py  verifiy.py
utils/: csv_utils.py  models.py  time_tracker.py
